--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,13 @@ a {
     text-decoration: none;
 }
 
-.sidebar-toggle {
+@media screen and (min-width: 800px) {
+    body {
+        font-size: 1rem;
+    }
+}
+
+.sidebar__toggle {
     position: fixed;
     top: 2rem;
     right: 3rem;
@@ -82,6 +88,36 @@ a {
     cursor: pointer;
     animation: bounce 2s ease-in-out infinite;
 }
-.sidebar-toggle:hover {
-    color: var(--clr-primary-7);
+
+.sidebar__toggle:hover {
+    color: vr(--clr-primary-7);
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.sidebar__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+}
+
+.close-btn {
+    font-size: 1.75rem;
+    background: transparent;
+    border-color: transparent;
+    color: var(--clr-primary-5);
+    transition: var(--transition);
+    cursor: pointer;
+    color: var(--clr-red-dark);
 }
